syntax = "proto3";
option csharp_namespace = "Auto.PricingEngine";
package price;
service Pricer {
  rpc GetPrice (PriceRequest) returns (PriceReply);
}
message PriceRequest {
  string manufacturer = 1;
  string model = 2;
  string color = 3;
  sint32 year = 4;
  uint32 mileage = 5;
}
message PriceReply {
  sint32 price = 1;
  string currencyCode = 2;
}